seaqt/QtWidgets/gen_qgraphicswidget.h

typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsSceneContextMenuEvent QGraphicsSceneContextMenuEvent;
typedef struct QGraphicsSceneDragDropEvent QGraphicsSceneDragDropEvent;
typedef struct QGraphicsSceneHoverEvent QGraphicsSceneHoverEvent;
typedef struct QGraphicsSceneMoveEvent QGraphicsSceneMoveEvent;
typedef struct QGraphicsSceneResizeEvent QGraphicsSceneResizeEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QObject QObject;
typedef struct QPainterPath QPainterPath;
typedef struct QPointF QPointF;
typedef struct QShowEvent QShowEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
bool QGraphicsWidget_override_virtual_itemChange(void* self, intptr_t slot);
QVariant* QGraphicsWidget_virtualbase_itemChange(void* self, int change, QVariant* value);
bool QGraphicsWidget_override_virtual_propertyChange(void* self, intptr_t slot);
QVariant* QGraphicsWidget_virtualbase_propertyChange(void* self, struct miqt_string propertyName, QVariant* value);
bool QGraphicsWidget_override_virtual_sceneEvent(void* self, intptr_t slot);
bool QGraphicsWidget_virtualbase_sceneEvent(void* self, QEvent* event);
bool QGraphicsWidget_override_virtual_windowFrameEvent(void* self, intptr_t slot);
bool QGraphicsWidget_virtualbase_windowFrameEvent(void* self, QEvent* e);
bool QGraphicsWidget_override_virtual_windowFrameSectionAt(void* self, intptr_t slot);
int QGraphicsWidget_virtualbase_windowFrameSectionAt(const void* self, QPointF* pos);
bool QGraphicsWidget_override_virtual_event(void* self, intptr_t slot);
bool QGraphicsWidget_virtualbase_event(void* self, QEvent* event);
bool QGraphicsWidget_override_virtual_changeEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_changeEvent(void* self, QEvent* event);
bool QGraphicsWidget_override_virtual_closeEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QGraphicsWidget_override_virtual_focusInEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QGraphicsWidget_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QGraphicsWidget_virtualbase_focusNextPrevChild(void* self, bool next);
bool QGraphicsWidget_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QGraphicsWidget_override_virtual_hideEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QGraphicsWidget_override_virtual_moveEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_moveEvent(void* self, QGraphicsSceneMoveEvent* event);
bool QGraphicsWidget_override_virtual_polishEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_polishEvent(void* self);
bool QGraphicsWidget_override_virtual_resizeEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_resizeEvent(void* self, QGraphicsSceneResizeEvent* event);
bool QGraphicsWidget_override_virtual_showEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_showEvent(void* self, QShowEvent* event);
bool QGraphicsWidget_override_virtual_hoverMoveEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_hoverMoveEvent(void* self, QGraphicsSceneHoverEvent* event);
bool QGraphicsWidget_override_virtual_hoverLeaveEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_hoverLeaveEvent(void* self, QGraphicsSceneHoverEvent* event);
bool QGraphicsWidget_override_virtual_grabMouseEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_grabMouseEvent(void* self, QEvent* event);
bool QGraphicsWidget_override_virtual_ungrabMouseEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_ungrabMouseEvent(void* self, QEvent* event);
bool QGraphicsWidget_override_virtual_grabKeyboardEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_grabKeyboardEvent(void* self, QEvent* event);
bool QGraphicsWidget_override_virtual_ungrabKeyboardEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_ungrabKeyboardEvent(void* self, QEvent* event);
bool QGraphicsWidget_override_virtual_eventFilter(void* self, intptr_t slot);
bool QGraphicsWidget_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QGraphicsWidget_override_virtual_timerEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QGraphicsWidget_override_virtual_childEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_childEvent(void* self, QChildEvent* event);
bool QGraphicsWidget_override_virtual_customEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_customEvent(void* self, QEvent* event);
bool QGraphicsWidget_override_virtual_connectNotify(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QGraphicsWidget_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
bool QGraphicsWidget_override_virtual_advance(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_advance(void* self, int phase);
bool QGraphicsWidget_override_virtual_contains(void* self, intptr_t slot);
bool QGraphicsWidget_virtualbase_contains(const void* self, QPointF* point);
bool QGraphicsWidget_override_virtual_collidesWithItem(void* self, intptr_t slot);
bool QGraphicsWidget_virtualbase_collidesWithItem(const void* self, QGraphicsItem* other, int mode);
bool QGraphicsWidget_override_virtual_collidesWithPath(void* self, intptr_t slot);
bool QGraphicsWidget_virtualbase_collidesWithPath(const void* self, QPainterPath* path, int mode);
bool QGraphicsWidget_override_virtual_isObscuredBy(void* self, intptr_t slot);
bool QGraphicsWidget_virtualbase_isObscuredBy(const void* self, QGraphicsItem* item);
bool QGraphicsWidget_override_virtual_opaqueArea(void* self, intptr_t slot);
QPainterPath* QGraphicsWidget_virtualbase_opaqueArea(const void* self);
bool QGraphicsWidget_override_virtual_sceneEventFilter(void* self, intptr_t slot);
bool QGraphicsWidget_virtualbase_sceneEventFilter(void* self, QGraphicsItem* watched, QEvent* event);
bool QGraphicsWidget_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_contextMenuEvent(void* self, QGraphicsSceneContextMenuEvent* event);
bool QGraphicsWidget_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_dragEnterEvent(void* self, QGraphicsSceneDragDropEvent* event);
bool QGraphicsWidget_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_dragLeaveEvent(void* self, QGraphicsSceneDragDropEvent* event);
bool QGraphicsWidget_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_dragMoveEvent(void* self, QGraphicsSceneDragDropEvent* event);
bool QGraphicsWidget_override_virtual_dropEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_dropEvent(void* self, QGraphicsSceneDragDropEvent* event);
bool QGraphicsWidget_override_virtual_hoverEnterEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_hoverEnterEvent(void* self, QGraphicsSceneHoverEvent* event);
bool QGraphicsWidget_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_keyPressEvent(void* self, QKeyEvent* event);