seaqt/QtWidgets/gen_qgraphicswidget.nim

proc fQGraphicsWidget_virtualbase_itemChange(self: pointer, change: cint, value: pointer): pointer{.importc: "QGraphicsWidget_virtualbase_itemChange".}
proc fcQGraphicsWidget_override_virtual_itemChange(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_itemChange".}
proc fQGraphicsWidget_virtualbase_propertyChange(self: pointer, propertyName: struct_miqt_string, value: pointer): pointer{.importc: "QGraphicsWidget_virtualbase_propertyChange".}
proc fcQGraphicsWidget_override_virtual_propertyChange(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_propertyChange".}
proc fQGraphicsWidget_virtualbase_sceneEvent(self: pointer, event: pointer): bool{.importc: "QGraphicsWidget_virtualbase_sceneEvent".}
proc fcQGraphicsWidget_override_virtual_sceneEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_sceneEvent".}
proc fQGraphicsWidget_virtualbase_windowFrameEvent(self: pointer, e: pointer): bool{.importc: "QGraphicsWidget_virtualbase_windowFrameEvent".}
proc fcQGraphicsWidget_override_virtual_windowFrameEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_windowFrameEvent".}
proc fQGraphicsWidget_virtualbase_windowFrameSectionAt(self: pointer, pos: pointer): cint{.importc: "QGraphicsWidget_virtualbase_windowFrameSectionAt".}
proc fcQGraphicsWidget_override_virtual_windowFrameSectionAt(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_windowFrameSectionAt".}
proc fQGraphicsWidget_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QGraphicsWidget_virtualbase_event".}
proc fcQGraphicsWidget_override_virtual_event(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_event".}
proc fQGraphicsWidget_virtualbase_changeEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_changeEvent".}
proc fcQGraphicsWidget_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_changeEvent".}
proc fQGraphicsWidget_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_closeEvent".}
proc fcQGraphicsWidget_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_closeEvent".}
proc fQGraphicsWidget_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_focusInEvent".}
proc fcQGraphicsWidget_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_focusInEvent".}
proc fQGraphicsWidget_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QGraphicsWidget_virtualbase_focusNextPrevChild".}
proc fcQGraphicsWidget_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_focusNextPrevChild".}
proc fQGraphicsWidget_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_focusOutEvent".}
proc fcQGraphicsWidget_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_focusOutEvent".}
proc fQGraphicsWidget_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_hideEvent".}
proc fcQGraphicsWidget_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_hideEvent".}
proc fQGraphicsWidget_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_moveEvent".}
proc fcQGraphicsWidget_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_moveEvent".}
proc fQGraphicsWidget_virtualbase_polishEvent(self: pointer, ): void{.importc: "QGraphicsWidget_virtualbase_polishEvent".}
proc fcQGraphicsWidget_override_virtual_polishEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_polishEvent".}
proc fQGraphicsWidget_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_resizeEvent".}
proc fcQGraphicsWidget_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_resizeEvent".}
proc fQGraphicsWidget_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_showEvent".}
proc fcQGraphicsWidget_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_showEvent".}
proc fQGraphicsWidget_virtualbase_hoverMoveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_hoverMoveEvent".}
proc fcQGraphicsWidget_override_virtual_hoverMoveEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_hoverMoveEvent".}
proc fQGraphicsWidget_virtualbase_hoverLeaveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_hoverLeaveEvent".}
proc fcQGraphicsWidget_override_virtual_hoverLeaveEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_hoverLeaveEvent".}
proc fQGraphicsWidget_virtualbase_grabMouseEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_grabMouseEvent".}
proc fcQGraphicsWidget_override_virtual_grabMouseEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_grabMouseEvent".}
proc fQGraphicsWidget_virtualbase_ungrabMouseEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_ungrabMouseEvent".}
proc fcQGraphicsWidget_override_virtual_ungrabMouseEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_ungrabMouseEvent".}
proc fQGraphicsWidget_virtualbase_grabKeyboardEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_grabKeyboardEvent".}
proc fcQGraphicsWidget_override_virtual_grabKeyboardEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_grabKeyboardEvent".}
proc fQGraphicsWidget_virtualbase_ungrabKeyboardEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_ungrabKeyboardEvent".}
proc fcQGraphicsWidget_override_virtual_ungrabKeyboardEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_ungrabKeyboardEvent".}
proc fQGraphicsWidget_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QGraphicsWidget_virtualbase_eventFilter".}
proc fcQGraphicsWidget_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_eventFilter".}
proc fQGraphicsWidget_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_timerEvent".}
proc fcQGraphicsWidget_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_timerEvent".}
proc fQGraphicsWidget_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_childEvent".}
proc fcQGraphicsWidget_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_childEvent".}
proc fQGraphicsWidget_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_customEvent".}
proc fcQGraphicsWidget_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_customEvent".}
proc fQGraphicsWidget_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsWidget_virtualbase_connectNotify".}
proc fcQGraphicsWidget_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_connectNotify".}
proc fQGraphicsWidget_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsWidget_virtualbase_disconnectNotify".}
proc fcQGraphicsWidget_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_disconnectNotify".}
proc fQGraphicsWidget_virtualbase_advance(self: pointer, phase: cint): void{.importc: "QGraphicsWidget_virtualbase_advance".}
proc fcQGraphicsWidget_override_virtual_advance(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_advance".}
proc fQGraphicsWidget_virtualbase_contains(self: pointer, point: pointer): bool{.importc: "QGraphicsWidget_virtualbase_contains".}
proc fcQGraphicsWidget_override_virtual_contains(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_contains".}
proc fQGraphicsWidget_virtualbase_collidesWithItem(self: pointer, other: pointer, mode: cint): bool{.importc: "QGraphicsWidget_virtualbase_collidesWithItem".}
proc fcQGraphicsWidget_override_virtual_collidesWithItem(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_collidesWithItem".}
proc fQGraphicsWidget_virtualbase_collidesWithPath(self: pointer, path: pointer, mode: cint): bool{.importc: "QGraphicsWidget_virtualbase_collidesWithPath".}
proc fcQGraphicsWidget_override_virtual_collidesWithPath(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_collidesWithPath".}
proc fQGraphicsWidget_virtualbase_isObscuredBy(self: pointer, item: pointer): bool{.importc: "QGraphicsWidget_virtualbase_isObscuredBy".}
proc fcQGraphicsWidget_override_virtual_isObscuredBy(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_isObscuredBy".}
proc fQGraphicsWidget_virtualbase_opaqueArea(self: pointer, ): pointer{.importc: "QGraphicsWidget_virtualbase_opaqueArea".}
proc fcQGraphicsWidget_override_virtual_opaqueArea(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_opaqueArea".}
proc fQGraphicsWidget_virtualbase_sceneEventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QGraphicsWidget_virtualbase_sceneEventFilter".}
proc fcQGraphicsWidget_override_virtual_sceneEventFilter(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_sceneEventFilter".}
proc fQGraphicsWidget_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_contextMenuEvent".}
proc fcQGraphicsWidget_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_contextMenuEvent".}
proc fQGraphicsWidget_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_dragEnterEvent".}
proc fcQGraphicsWidget_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_dragEnterEvent".}
proc fQGraphicsWidget_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_dragLeaveEvent".}
proc fcQGraphicsWidget_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_dragLeaveEvent".}
proc fQGraphicsWidget_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_dragMoveEvent".}
proc fcQGraphicsWidget_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_dragMoveEvent".}
proc fQGraphicsWidget_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_dropEvent".}
proc fcQGraphicsWidget_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_dropEvent".}
proc fQGraphicsWidget_virtualbase_hoverEnterEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_hoverEnterEvent".}
proc fcQGraphicsWidget_override_virtual_hoverEnterEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_hoverEnterEvent".}
proc fQGraphicsWidget_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_keyPressEvent".}
proc fcQGraphicsWidget_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_keyPressEvent".}
